--- a/core/docz-components/package.json
+++ b/core/docz-components/package.json
@@ -29,6 +29,7 @@
     "trailingComma": "es5"
   },
   "devDependencies": {
+    "@types/array-sort": "^1.0.0",
     "@types/jest": "^24.0.18",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -46,6 +47,7 @@
     "@emotion/core": "^10.0.16",
     "@mdx-js/react": "^1.4.0",
     "@theme-ui/typography": "^0.2.34",
+    "array-sort": "^1.0.0",
     "copy-text-to-clipboard": "^2.1.0",
     "lodash": "^4.17.15",
     "lodash-es": "^4.17.15",
