--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -19,5 +19,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "scheduler": "^0.15.0"
+  },
+  "resolutions": {
+    "//": "https://github.com/lovell/sharp/issues/1882",
+    "minipass": "2.7.0"
   }
 }
