--- a/examples/gatsby/package.json
+++ b/examples/gatsby/package.json
@@ -31,5 +31,9 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "scheduler": "^0.15.0"
+  },
+  "resolutions": {
+    "//": "https://github.com/lovell/sharp/issues/1882",
+    "minipass": "2.7.0"
   }
 }
